--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 body {
-  background-color: var(--primary-bg-color);
+  /* background-color: var(--primary-bg-color); */
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -159,7 +159,8 @@ letter-spacing: 0.02em;
 display: flex;
 align-items: center;
 }
-.contacts-link.link:hover {
+.contacts-link.link:hover,
+.contacts-link.link:focus {
   color: var(--accent-color);
 }
 .icon {
@@ -212,7 +213,8 @@ align-items: center;
   background-position: center;
 
   background-color: var(--grey-bg-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), 
+  rgba(47, 48, 58, 0.4)),
   url(../images/design-img/Img-min.jpg);
 
   text-align: center;
@@ -264,7 +266,7 @@ border-radius: 4px;
   background-color: #188ce8;
 }
 
-/* Раздел преимущества и наши работы */
+/* Наши преимущества */
 
 .section-title {
   margin-bottom: 50px;
@@ -278,10 +280,6 @@ border-radius: 4px;
 }
 
 
-.works {
-  background-color: #f5f4fa;
-  outline: 1px solid #dd3898;
-}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -294,11 +292,11 @@ border-radius: 4px;
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .features {
   padding-top: 94px;
   padding-bottom: 47px;
-  background-color:  #F5F4FA;
-
+  background-color:var(--white-color);
 
 }
 .features-list {
@@ -308,10 +306,12 @@ border-radius: 4px;
   margin-top: -30px;
   margin-left: -30px;
 }
+
 .features-item { 
   flex-basis: calc((100% - 120px) / 4);
   margin-left: 30px;
   }
+
 .features-title {
   margin-bottom: 10px;
   color: var(--title-text-color);
@@ -321,14 +321,17 @@ border-radius: 4px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+
 .features-text {
 line-height: 1.71;
 text-align: left;
 }
+
 .features-icon {
   width: 70px;
   height: 70px;
 }
+
 .features-icon-container {
   display: flex;
   justify-content: center;
@@ -346,7 +349,8 @@ text-align: left;
 .works {
   padding-top: 47px;
   padding-bottom: 94px;
-  outline: 1px solid teal;
+  background-color:var(--white-color);
+  /* outline: 1px solid teal; */
 }
 
 .works-list {
@@ -356,12 +360,12 @@ text-align: left;
   margin-top: -30px;
   margin-left: -30px;
 }
+
 .works-item {
   flex-basis: calc((100% - 90px) / 3);
   margin-top: 30px;  
   margin-left: 30px;
   }
-
 
 /* Раздел команда */
 .team {
@@ -377,6 +381,7 @@ text-align: left;
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 .team-text {
   font-size: 16px;
   line-height: 1.9;
@@ -384,6 +389,7 @@ text-align: left;
   letter-spacing: 0.03em;
   margin-bottom: 16px;
 }
+
 .team-list {
   display: flex;
   align-items: center;
@@ -400,6 +406,7 @@ text-align: left;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
+
 .team-description {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -460,6 +467,10 @@ fill:var(--white-color);
 
 /* Наши клиенты */
 
+.clients {
+  background-color: var(--white-color);
+}
+
 .clients-list {
   display: flex;
   align-items: center;
@@ -467,13 +478,13 @@ fill:var(--white-color);
   margin-top: -30px;
   margin-left: -30px;
 }
+
 .clients-item {
   flex-basis: calc((100% - 180px) / 6);
   margin-top: 30px;  
   margin-left: 30px;
-  width: 170px;
-  height: 92px;
 }
+
 .clients-item-link {
   display: flex;
   justify-content: center;
@@ -482,20 +493,21 @@ fill:var(--white-color);
   height: 92px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
-
 }
-.clients-item-link:hover ,
-.clients-item-link:focus   {
+
+.clients-item-link:hover,
+.clients-item-link:focus  {
   border: 1px solid var(--accent-color);
-
 }
+
 .icon-client {
   fill: #afb1b8;
   width: 106px;
   height: 60px;
 }
-.icon-client:hover,
-.icon-client:focus {
+
+.clients-item-link:hover .icon-client,
+.clients-item-link:focus .icon-client {
     fill: #2196f3;
   }
 
@@ -506,16 +518,20 @@ fill:var(--white-color);
   padding-top: 60px;
   padding-bottom: 60px;
 }
+
 .footer-container {
   display: flex;
 }
+
 .footer-logo,
 .address {
   color: #ffffff;
 }
+
 .footer-link-address {
   color: var(--white-color);
 }
+
 .footer-logo {
   display: block;
   margin-bottom: 20px;
@@ -531,12 +547,15 @@ fill:var(--white-color);
 .footer-logo:focus {
   color: var(--accent-color);
 }
+
 .address {
   font-style: normal;
 }
+
 .address-item:not(:last-child) {
 margin-bottom: 9px;
 }
+
 .footer-link {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
@@ -544,6 +563,7 @@ margin-bottom: 9px;
   line-height: 1.7;
   letter-spacing: 0.03em;
 }
+
 .footer-link:hover,
 .footer-link:focus {
   color: var(--accent-color);
@@ -554,6 +574,7 @@ margin-bottom: 9px;
   line-height: 1.7;
   letter-spacing: 0.03em;
 }
+
 .footer-title {
   margin-bottom: 20px;
 
@@ -564,21 +585,26 @@ margin-bottom: 9px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+
 .social-links-section {
   margin-left: 72px;
   padding-top: 12px;
 }
+
 .social-list {
   display: flex;
 }
+
 .social-list-item {
   margin-right: 10px;
 }
+
 .icon-footer {
   fill: var(--white-color);
   width: 20px;
   height:20px
 }
+
 .footer-social-link {
   background-color: rgba(255, 255, 255, 0.1);
   width: 44px;
@@ -588,23 +614,24 @@ margin-bottom: 9px;
   align-items: center;
   justify-content: center;
 }
+
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--accent-color);
 }
 
-
-
 /* Портфолио */
 .portfolio-page {
   background-color: #ffffff ;
 }
+
 .filter {
   display: flex;
   justify-content: center;
   padding-bottom: 16px;
   margin-bottom: 34px;
 }
+
 .filter-button {
   display: block;
   text-align: center;
@@ -629,6 +656,7 @@ background-color: var(--primary-bg-color);
     0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 .filter-item:not(:last-child) {
   margin-right: 8px;
 }
@@ -648,13 +676,13 @@ line-height: 1.87;
 letter-spacing: 0.03em;
 }
 
-
 .projects {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
 }
+
 .projects-item {
   flex-basis: calc((100% - 270px) / 9);
   margin-left: 30px;
@@ -663,6 +691,8 @@ letter-spacing: 0.03em;
   margin-right: 30px;
   margin-top: 30px; */
 } 
+
+
 .projects-item:hover,
 .projects-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
@@ -675,21 +705,6 @@ letter-spacing: 0.03em;
 .projects-item-description {
   padding: 20px 24px;
   border: 1px solid #EEEEEE;
-}
-
-/* SVG */
-
-/* контакты в хедере */
-
-
-/* Наши клиенты */
-.clients-itom-link {
-  display: inline-block;
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-.icon-client {
-    fill: #AFB1B8;
 }
 
 
